syntax = "proto3";

package pb;

option go_package = "/pb";


service MongoDBService {
  rpc FetchDataFromMongoDB(FetchRequest) returns (FetchResponse);
}

message FetchRequest {
  repeated string parameters = 1;
}

message FetchResponse {
  repeated string fetched_data = 1;
}
